# ecce

./: .gitignore  CMakeLists.txt  LICENSE  README.md
ecce/: collections.cpp  collections.hpp  estimation.cpp  estimation.hpp  geometry.cpp  geometry.hpp  pose_map.cpp  pose_map.hpp  simulation.cpp  simulation.hpp  visualization.cpp  visualization.hpp
examples/: CMakeLists.txt  camera_to_vehicle_calibration.cpp  draw_images.cpp
python/: draw_info_matrix.py  draw_mvn.py  draw_pnp_figure.py  g2o_interop.py  opencv_visualization.py  plot_g2o.py  plotly_functions.py  pyvista_plotting.py  requirements.txt
src/: geometry.cpp  pose_map.cpp  pose_map.hpp  simulation.cpp  simulation.hpp
